--- a/index.html
+++ b/index.html
@@ -17,28 +17,39 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/MY_PHOTO.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1 id="name" style="font-size: 36px;"><strong>Ruchit Naresh Kini</strong><br />
+					<h1>Computational Engineer<br /><br />
+
+					</h1>
 				</div>
+
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="http://www.linkedin.com/in/ruchitkini" class="icon brands fa-linkedin"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/ruchitkini" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="ruchitkini21@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+				</div>
+
 			</header>
 
 		<!-- Main -->
 			<div id="main">
 
 				<!-- One -->
+				
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>ABOUT ME</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
-						<ul class="actions">
+						<p>Proficient in Computational Fluid Dynamics (CFD), Finite Element Analysis (FEA), and simulation software such as OpenFOAM, Abaqus and Ansys. Experienced in multiphase simulations, static structural analyses, thermal analyses, and coupled simulations for Fluid-Structure Interaction (FSI). Developing expertise in Physics-Informed Neural Networks (PINNs) to bridge traditional methods with machine learning. Committed to contributing to global advancements in computational engineering with a disciplined work ethic, a natural curiosity for solving new problems, strong communication, teamwork skills, and a dedication to continual self-improvement.</p>
+						<!--<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						</ul>  -->
 					</section>
-
+				
 				<!-- Two -->
+				<!--
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
@@ -57,46 +68,8 @@
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
-
+				-->
 				<!-- Three -->
-					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
-						<div class="row">
-							<div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
-									</li>
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">ruchitkini21@gmail.com</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
-				<!-- Four -->
 				<!--
 					<section id="four">
 						<h2>Elements</h2>
@@ -417,18 +390,17 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- Footer -->
+		<!--
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="http://www.linkedin.com/in/ruchitkini" class="icon brands fa-linkedin"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/ruchitkini" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="ruchitkini21@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 			</footer>
-
+		-->
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.poptrox.min.js"></script>
