Aligned the header images and text to center

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/MY_PHOTO.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/MY_PHOTO2.jpg" alt="" /></a>
 					<h1 id="name" style="font-size: 36px;"><strong>Ruchit Naresh Kini</strong><br />
 					<h1>Computational Engineer<br /><br />
 
@@ -42,7 +42,7 @@
 						<header class="major">
 							<h2>ABOUT ME</h2>
 						</header>
-						<p>Proficient in Computational Fluid Dynamics (CFD), Finite Element Analysis (FEA), and simulation software such as OpenFOAM, Abaqus and Ansys. Experienced in multiphase simulations, static structural analyses, thermal analyses, and coupled simulations for Fluid-Structure Interaction (FSI). Developing expertise in Physics-Informed Neural Networks (PINNs) to bridge traditional methods with machine learning. Committed to contributing to global advancements in computational engineering with a disciplined work ethic, a natural curiosity for solving new problems, strong communication, teamwork skills, and a dedication to continual self-improvement.</p>
+						<p style="text-align: justify;">Proficient in Computational Fluid Dynamics (CFD), Finite Element Analysis (FEA), and simulation software such as OpenFOAM, Abaqus and Ansys. Experienced in multiphase simulations, static structural analyses, thermal analyses, and coupled simulations for Fluid-Structure Interaction (FSI). Developing expertise in Physics-Informed Neural Networks (PINNs) to bridge traditional methods with machine learning. Committed to contributing to global advancements in computational engineering with a disciplined work ethic, a natural curiosity for solving new problems, strong communication, teamwork skills, and a dedication to continual self-improvement.</p>
 						<!--<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>  -->
