--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/MY_PHOTO2.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/MY_PHOTO2.JPG" alt="" /></a>
 					<h1 id="name" style="font-size: 36px;"><strong>Ruchit Naresh Kini</strong><br />
 					<h1>Computational Engineer<br /><br />
 
