--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<ul class="icons">
 						<li><a href="http://www.linkedin.com/in/ruchitkini" class="icon brands fa-linkedin"><span class="label">Github</span></a></li>
 						<li><a href="https://github.com/ruchitkini" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="ruchitkini21@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:ruchitkini@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 
